[package]
name = "endpointsecurity"
version = "0.3.0"
authors = ["Mitchell Grenier <mitchell@confurious.io>"]
edition = "2018"
description = "Nice (ish) bindings for the EndpointSecurity framework on macOS"
license-file = "LICENSE"
keywords = ["security", "macos", "endpoint"]
readme = "README.md"
homepage = "https://github.com/obelisk/endpointsecurity"

[dependencies]
crossbeam-channel = "0.5"
block = "0.1.6"
env_logger = { version = "0.11", default-features = false }
libc = "0.2"
log = "0.4"
serde = {version = "1", features = ["derive"]}

[dev-dependencies]
serde_json = "1"

[build-dependencies]
bindgen = "0.65.1"
